# bevy_shooter_1

./: Cargo.toml  README.md
src/: main.rs
src/utils/: logger.rs
