[package]
name = "bevy_shooter_1"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "=1.0.102"
rand = "=0.10.1"
bevy = "=0.19.0"
dotenvy = "=0.15.7"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = "=0.3.23"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
